# UBT_DIGI

./: .gitignore  CMakeLists.txt  README.md  main.cc
.github/workflows/: documentation-pages.yml
analysis/: fit_scintillation.C  plot_adc_per_edep_vs_position.C  plot_event_observables.C  run_general_studies.sh  scintillation_fit.root  simulate_timing_model.C  study_adc_vs_edep_position.C  validate_timing_distribution.C
analysis/plots/adc/: adc_per_edep_vs_position.csv
analysis/plots_20mm/adc/: adc_per_edep_vs_position.csv
documentation/: SHiP-DP.bib  SHiP-logo.eps  conclusions.tex  implementation.tex  introduction.tex  listsymbols  main.tex  main.tex~  preamble.tex  reference.tex  reference.tex~  ship-symbols-def.tex  ship-symbols-list.tex  title-SHiP-INT.tex  title-SHiP-NOTE.tex  title-SHiP-NOTE.tex~  title-SHiP-PROC.tex  title-SHiP-PROC.tex~
geometry/: generate_layout.py  plot_layout.py  ubt_geometry_digitization.yaml  ubt_geometry_simulation.yaml
include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  EventData.hh  OutputConfiguration.hh  PMTSensitiveDetector.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  ScintillatorDigi.hh  ScintillatorDigitizerModule.hh  ScintillatorSensitiveDetector.hh  SteppingAction.hh  TimingModelParameters.hh
macros/: run_gammas.mac  run_muons.mac  run_muons_20mm.mac  run_muons_center.mac  vis.mac
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  EventData.cc  OutputConfiguration.cc  PMTSensitiveDetector.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  ScintillatorDigi.cc  ScintillatorDigitizerModule.cc  ScintillatorSensitiveDetector.cc  SteppingAction.cc
tests/: validate_timing_model.cc
